@@ -6,6 +6,8 @@ Release: 0.60 -
       . The entry is internally represented as a table
       . Combo can have empty options
       . New IWL::Google::Map widget
+      . New IWL::Canvas widget
+      . New IWL::ProgressBar widget
       . New selection API for IWL::Objects
       . Rewrite of the shared resource management
         * No more global hash for storing shared resources
@@ -17,6 +19,11 @@ Release: 0.60 -
         * Multiple shared resources are obtained in one request, if a 'STATIC_URI_SCRIPT' is in use
       . Javascript:
         * document.insertScript is now part of 'base.js', requires IWL
+	* Event.emitSignal can emit regular HTML events, such as 'change' or 'keydown'.
+	    Options for these events (like 'bubbles', or 'ctrlKey') can be added to the
+	    created event, by instantiating a new 'Event.Options' object, with the options
+	    hash as the parameter of the constructor, and passing it as the last argument
+	    of the emitSignal method.
       . Various internal changes
 
 Release: 0.52 - 22/11/07
